@@ -39,6 +39,7 @@
 #include <sstream>
 #include <ext/mt_allocator.h>
 #include <ext/malloc_allocator.h>
+#include <cxxabi.h>
 #include <testsuite_performance.h>
 
 using namespace std;
@@ -108,6 +109,7 @@ template<typename Container>
   test_container(Container obj)
   {
     using namespace __gnu_test;
+    int status;
 
     time_counter time;
     resource_counter resource;
@@ -118,7 +120,8 @@ template<typename Container>
  
     std::ostringstream comment;
     comment << "iterations: " << test_iterations << '\t';
-    comment << "type: " << typeid(obj).name();
+    comment << "type: " << abi::__cxa_demangle(typeid(obj).name(),
+					       0, 0, &status);
     report_header(__FILE__, comment.str());
     report_performance(__FILE__, string(), time, resource);
   }
